--- a/code/src/java/pcgen/gui/prop/LanguageBundle_it.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle_it.properties
@@ -1062,6 +1062,8 @@ in_otherAssets=Altri possessi
 
 in_magicItems=Oggetti magici
 
+in_dmNotes=DM Notes
+
 in_newItem=Nuovo oggetto
 
 in_newValue=Nuovo valore
