--- a/code/src/java/pcgen/gui/prop/LanguageBundle_pt.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle_pt.properties
@@ -987,6 +987,8 @@ in_otherAssets=Outras Posses
 
 in_magicItems=Itens M\u00E1gicos
 
+in_dmNotes=DM Notes
+
 in_newItem=Item Novo
 
 in_newValue=Valor Novo
