--- a/code/src/java/pcgen/gui/prop/LanguageBundle_es.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle_es.properties
@@ -1057,7 +1057,7 @@ in_otherAssets=Otros recursos
 
 in_magicItems=Objetos m\u00E1gicos
 
-in_dmNotes=DM Notes
+in_dmNotes=Notas del DM
 
 in_newItem=Nuevo objeto
 
